@@ -1,3 +1,9 @@
+Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
+
+ - lib/Makefile.am: only install libupsclient-config if pkg-config support is
+   disabled.
+ - man/libupsclient-config.1: created (Debian Lintian QA report)
+
 Sat Jan 26 16:40:01 UTC 2008 / Charles Lepple <clepple@gmail.com>
 
  * driver/powercom.[ch], man/powercom.8: Powercom update v0.11 from Alexey Sidorov:
